--- a/service/dashboard/src/assets/css/_overrides.scss
+++ b/service/dashboard/src/assets/css/_overrides.scss
@@ -18,3 +18,7 @@
   justify-content: space-between;
   vertical-align: baseline;
 }
+
+.el-tabs__content {
+  padding: $padding-default !important;
+}
