modifications made by eslint + reorganising styles

--- a/service/dashboard/src/assets/css/_overrides.scss
+++ b/service/dashboard/src/assets/css/_overrides.scss
@@ -10,7 +10,7 @@
   }
 }
 
-.el-card.flexed .el-card__body {
+.el-card__body .flexed {
   align-content: center;
   align-items: center;
   display: flex;
@@ -21,4 +21,16 @@
 
 .el-tabs__content {
   padding: $padding-default !important;
+}
+
+.cards-list { 
+  .el-card {
+    margin-bottom: $margin-default;
+    overflow: visible;
+    font-size: $font-size-card;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
