clean up scss files and set up custom utilities

--- a/service/dashboard/src/assets/css/utilities/_spacing.scss
+++ b/service/dashboard/src/assets/css/utilities/_spacing.scss
@@ -1,1 +1,2 @@
-@import "node_modules/bootstrap/scss/utilities/spacing";
+@import "./bootstrap_utilities";
+@import "../vendors/bootstrap-4.0.0/scss/utilities/spacing";
