--- a/service/dashboard/src/assets/css/utilities/_bootstrap_utilities.scss
+++ b/service/dashboard/src/assets/css/utilities/_bootstrap_utilities.scss
@@ -1,3 +1,3 @@
-@import "node_modules/bootstrap/scss/functions";
-@import "node_modules/bootstrap/scss/variables";
-@import "node_modules/bootstrap/scss/mixins";
+@import "../vendors/bootstrap-4.0.0/scss/functions";
+@import "../vendors/bootstrap-4.0.0/scss/variables";
+@import "../vendors/bootstrap-4.0.0/scss/mixins";
